[package]
name = "teensy4-bsp"
version = "0.5.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """
Rust-based BSP for the Teensy 4.
Part of the teensy4-rs project.
"""
categories.workspace = true
keywords.workspace = true
autoexamples = false

[workspace.package]
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mciantyre/teensy4-rs"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "teensy4",
]

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.teensy4-fcb]
path = "teensy4-fcb"
version = "0.4"

[dependencies.imxrt-ral]
workspace = true

[dependencies.imxrt-hal]
workspace = true

[dependencies.imxrt-rt]
workspace = true
optional = true

[build-dependencies.imxrt-rt]
workspace = true
optional = true

[dependencies.teensy4-pins]
version = "0.3.1"
path = "teensy4-pins"

[workspace]
members = [
    "teensy4-fcb",
    "teensy4-panic",
    "teensy4-pins",
    "tools",
]

[workspace.dependencies]
imxrt-boot-gen = { version = "0.3.0", features = ["imxrt1060"] }
imxrt-hal = { version = "0.5.3", features = ["imxrt1060"] }
imxrt-iomuxc = { version = "0.2.0", features = ["imxrt1060"] }
imxrt-log = { version = "0.1" }
imxrt-ral = { version = "0.5", features = ["imxrt1062"] }
imxrt-rt = { version = "0.1.4", features = ["device"] }

[features]
rt = ["dep:imxrt-rt", "imxrt-ral/rt"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0

[profile.release]
debug = 2

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "thumbv7em-none-eabihf"

[dev-dependencies.teensy4-panic]
version = "0.2"
path = "teensy4-panic"
features = ["log"]

[dev-dependencies]
defmt = "0.3"
defmt-bbq = "0.1"
embedded-hal = "0.2"
imxrt-log = { workspace = true, default-features = false, features = ["usbd", "log"] }
log = "0.4"
nb = "1"
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1", default-features = false, features = ["cortex-m-systick"] }
usb-device = "0.2"
usbd-serial = "0.1"

[[example]]
name = "blocking_gpt"
required-features = ["rt"]

[[example]]
name = "blocking_led"
required-features = ["rt"]

[[example]]
name = "blocking_panic"
required-features = ["rt"]

[[example]]
name = "blocking_pit"
required-features = ["rt"]

[[example]]
name = "blocking_uart"
required-features = ["rt"]

[[example]]
name = "rtic_configure_pin"
required-features = ["rt"]

[[example]]
name = "rtic_defmt_usb_log"
required-features = ["rt"]

[[example]]
name = "rtic_gpt"
required-features = ["rt"]

[[example]]
name = "rtic_lpspi"
required-features = ["rt"]

[[example]]
name = "rtic_pit"
required-features = ["rt"]

[[example]]
name = "rtic_uart"
required-features = ["rt"]

[[example]]
name = "rtic_usb_log"
required-features = ["rt"]
