[package]
name = "imxrt1060-hal"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
embedded-hal = "0.2.3"
imxrt1060-pac = { path = "../imxrt1060-pac" }

[lib]
bench = false
test = false

[features]
default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits