[package]
name = "imxrt1060-hal"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
embedded-hal = "0.2.3"
imxrt1060-pac = { path = "../imxrt1060-pac" }
nb = "0.1.2"
void = { version = "1.0", default-features = false }
log = "0.4.8"

[lib]
bench = false
test = false

[features]
default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits