[package]
name = "imxrt1060-pac"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
imxrt1060-core = { path = "./imxrt1060-core" }
# Peripherals
imxrt1060-ccm = { path = "./imxrt1060-ccm" }
imxrt1060-ccm-analog = { path = "./imxrt1060-ccm-analog" }
imxrt1060-gpio1 = { path = "./imxrt1060-gpio1" }
imxrt1060-pit = { path = "./imxrt1060-pit" }

[lib]
test = false
bench = false