[package]
name = "imxrt1062-hal"
version = "0.2.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mciantyre/teensy4-rs"
description = """
Hardware abstraction layer (HAL) for the iMXRT1062 family of processors.
Part of the teensy4-rs project.
"""
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "embedded-hal",
]

[dependencies]
cortex-m = "0.6.1"
embedded-hal = "0.2.3"
imxrt1062-pac = { version = "0.2.0", path = "../imxrt1062-pac" }
nb = "0.1.2"
void = { version = "1.0.2", default-features = false }
log = "0.4.8"

[lib]
bench = false
test = false

[features]
default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits
