[lib]
bench = false
test = false

[package]
authors = ['Ian McIntyre <ianpmcintyre@gmail.com>']
categories = [
    'embedded',
    'hardware-support',
    'no-std',
]
description = '''
Peripheral Access Crates (PAC) for the iMXRT1062 family of processors.
Part of the teensy4-rs project.
'''
edition = '2018'
keywords = [
    'arm',
    'svd2rust',
    'imxrt1062',
    'cortex-m',
]
license = 'MIT OR Apache-2.0'
name = 'imxrt1062-pac'
repository = 'https://github.com/mciantyre/teensy4-rs'
version = '0.1.0'

[dependencies]
cortex-m = '0.6.1'

[dependencies.imxrt1062-adc-etc]
path = 'imxrt1062-adc-etc'

[dependencies.imxrt1062-adc1]
path = 'imxrt1062-adc1'

[dependencies.imxrt1062-aipstz1]
path = 'imxrt1062-aipstz1'

[dependencies.imxrt1062-aoi1]
path = 'imxrt1062-aoi1'

[dependencies.imxrt1062-bee]
path = 'imxrt1062-bee'

[dependencies.imxrt1062-can1]
path = 'imxrt1062-can1'

[dependencies.imxrt1062-can3]
path = 'imxrt1062-can3'

[dependencies.imxrt1062-ccm]
path = 'imxrt1062-ccm'

[dependencies.imxrt1062-ccm-analog]
path = 'imxrt1062-ccm-analog'

[dependencies.imxrt1062-cmp1]
path = 'imxrt1062-cmp1'

[dependencies.imxrt1062-core]
path = 'imxrt1062-core'

[dependencies.imxrt1062-csi]
path = 'imxrt1062-csi'

[dependencies.imxrt1062-csu]
path = 'imxrt1062-csu'

[dependencies.imxrt1062-dcdc]
path = 'imxrt1062-dcdc'

[dependencies.imxrt1062-dcp]
path = 'imxrt1062-dcp'

[dependencies.imxrt1062-dma0]
path = 'imxrt1062-dma0'

[dependencies.imxrt1062-dmamux]
path = 'imxrt1062-dmamux'

[dependencies.imxrt1062-enc1]
path = 'imxrt1062-enc1'

[dependencies.imxrt1062-enet]
path = 'imxrt1062-enet'

[dependencies.imxrt1062-ewm]
path = 'imxrt1062-ewm'

[dependencies.imxrt1062-flexio1]
path = 'imxrt1062-flexio1'

[dependencies.imxrt1062-flexram]
path = 'imxrt1062-flexram'

[dependencies.imxrt1062-flexspi]
path = 'imxrt1062-flexspi'

[dependencies.imxrt1062-gpc]
path = 'imxrt1062-gpc'

[dependencies.imxrt1062-gpio1]
path = 'imxrt1062-gpio1'

[dependencies.imxrt1062-gpt1]
path = 'imxrt1062-gpt1'

[dependencies.imxrt1062-iomuxc]
path = 'imxrt1062-iomuxc'

[dependencies.imxrt1062-iomuxc-gpr]
path = 'imxrt1062-iomuxc-gpr'

[dependencies.imxrt1062-iomuxc-snvs]
path = 'imxrt1062-iomuxc-snvs'

[dependencies.imxrt1062-iomuxc-snvs-gpr]
path = 'imxrt1062-iomuxc-snvs-gpr'

[dependencies.imxrt1062-kpp]
path = 'imxrt1062-kpp'

[dependencies.imxrt1062-lcdif]
path = 'imxrt1062-lcdif'

[dependencies.imxrt1062-lpi2c1]
path = 'imxrt1062-lpi2c1'

[dependencies.imxrt1062-lpspi1]
path = 'imxrt1062-lpspi1'

[dependencies.imxrt1062-lpuart1]
path = 'imxrt1062-lpuart1'

[dependencies.imxrt1062-ocotp]
path = 'imxrt1062-ocotp'

[dependencies.imxrt1062-pgc]
path = 'imxrt1062-pgc'

[dependencies.imxrt1062-pit]
path = 'imxrt1062-pit'

[dependencies.imxrt1062-pmu]
path = 'imxrt1062-pmu'

[dependencies.imxrt1062-pwm1]
path = 'imxrt1062-pwm1'

[dependencies.imxrt1062-pxp]
path = 'imxrt1062-pxp'

[dependencies.imxrt1062-romc]
path = 'imxrt1062-romc'

[dependencies.imxrt1062-rtwdog]
path = 'imxrt1062-rtwdog'

[dependencies.imxrt1062-sai1]
path = 'imxrt1062-sai1'

[dependencies.imxrt1062-semc]
path = 'imxrt1062-semc'

[dependencies.imxrt1062-snvs]
path = 'imxrt1062-snvs'

[dependencies.imxrt1062-spdif]
path = 'imxrt1062-spdif'

[dependencies.imxrt1062-src]
path = 'imxrt1062-src'

[dependencies.imxrt1062-system-control]
path = 'imxrt1062-system-control'

[dependencies.imxrt1062-tempmon]
path = 'imxrt1062-tempmon'

[dependencies.imxrt1062-tmr1]
path = 'imxrt1062-tmr1'

[dependencies.imxrt1062-trng]
path = 'imxrt1062-trng'

[dependencies.imxrt1062-tsc]
path = 'imxrt1062-tsc'

[dependencies.imxrt1062-usb-analog]
path = 'imxrt1062-usb-analog'

[dependencies.imxrt1062-usb1]
path = 'imxrt1062-usb1'

[dependencies.imxrt1062-usbnc1]
path = 'imxrt1062-usbnc1'

[dependencies.imxrt1062-usbphy1]
path = 'imxrt1062-usbphy1'

[dependencies.imxrt1062-usdhc1]
path = 'imxrt1062-usdhc1'

[dependencies.imxrt1062-wdog1]
path = 'imxrt1062-wdog1'

[dependencies.imxrt1062-xbara1]
path = 'imxrt1062-xbara1'

[dependencies.imxrt1062-xbarb2]
path = 'imxrt1062-xbarb2'

[dependencies.imxrt1062-xtalosc24m]
path = 'imxrt1062-xtalosc24m'
