[package]
name = 'imxrt1062-pac'
version = '0.2.0'
categories = [
    'embedded',
    'hardware-support',
    'no-std',
]
keywords = [
    'arm',
    'svd2rust',
    'imxrt1062',
    'cortex-m',
]
description = '''
Peripheral Access Crates (PAC) for the iMXRT1062 family of processors.

This crate is not maintained. Consider using the register access layer provided by the
[imxrt-rs](https://github.com/imxrt-rs/imxrt-rs) project.

Formerly part of the teensy4-rs project.
'''
license = 'MIT OR Apache-2.0'
repository = 'https://github.com/mciantyre/teensy4-rs'
authors = ['Ian McIntyre <ianpmcintyre@gmail.com>']
edition = '2018'

[dependencies]
cortex-m = '0.6.1'

[dependencies.imxrt1062-adc-etc]
path = 'imxrt1062-adc-etc'
version = '0.1.0'

[dependencies.imxrt1062-adc1]
path = 'imxrt1062-adc1'
version = '0.1.0'

[dependencies.imxrt1062-aipstz1]
path = 'imxrt1062-aipstz1'
version = '0.1.0'

[dependencies.imxrt1062-aoi1]
path = 'imxrt1062-aoi1'
version = '0.1.0'

[dependencies.imxrt1062-bee]
path = 'imxrt1062-bee'
version = '0.1.0'

[dependencies.imxrt1062-can1]
path = 'imxrt1062-can1'
version = '0.1.0'

[dependencies.imxrt1062-can3]
path = 'imxrt1062-can3'
version = '0.1.0'

[dependencies.imxrt1062-ccm]
path = 'imxrt1062-ccm'
version = '0.1.0'

[dependencies.imxrt1062-ccm-analog]
path = 'imxrt1062-ccm-analog'
version = '0.1.0'

[dependencies.imxrt1062-cmp1]
path = 'imxrt1062-cmp1'
version = '0.1.0'

[dependencies.imxrt1062-core]
path = 'imxrt1062-core'
version = '0.1.0'

[dependencies.imxrt1062-csi]
path = 'imxrt1062-csi'
version = '0.1.0'

[dependencies.imxrt1062-csu]
path = 'imxrt1062-csu'
version = '0.1.0'

[dependencies.imxrt1062-dcdc]
path = 'imxrt1062-dcdc'
version = '0.1.0'

[dependencies.imxrt1062-dcp]
path = 'imxrt1062-dcp'
version = '0.1.0'

[dependencies.imxrt1062-dma0]
path = 'imxrt1062-dma0'
version = '0.1.0'

[dependencies.imxrt1062-dmamux]
path = 'imxrt1062-dmamux'
version = '0.1.0'

[dependencies.imxrt1062-enc1]
path = 'imxrt1062-enc1'
version = '0.1.0'

[dependencies.imxrt1062-enet]
path = 'imxrt1062-enet'
version = '0.1.0'

[dependencies.imxrt1062-ewm]
path = 'imxrt1062-ewm'
version = '0.1.0'

[dependencies.imxrt1062-flexio1]
path = 'imxrt1062-flexio1'
version = '0.1.0'

[dependencies.imxrt1062-flexram]
path = 'imxrt1062-flexram'
version = '0.1.0'

[dependencies.imxrt1062-flexspi]
path = 'imxrt1062-flexspi'
version = '0.1.0'

[dependencies.imxrt1062-gpc]
path = 'imxrt1062-gpc'
version = '0.1.0'

[dependencies.imxrt1062-gpio1]
path = 'imxrt1062-gpio1'
version = '0.1.0'

[dependencies.imxrt1062-gpt1]
path = 'imxrt1062-gpt1'
version = '0.1.0'

[dependencies.imxrt1062-iomuxc]
path = 'imxrt1062-iomuxc'
version = '0.1.0'

[dependencies.imxrt1062-iomuxc-gpr]
path = 'imxrt1062-iomuxc-gpr'
version = '0.1.0'

[dependencies.imxrt1062-iomuxc-snvs]
path = 'imxrt1062-iomuxc-snvs'
version = '0.1.0'

[dependencies.imxrt1062-iomuxc-snvs-gpr]
path = 'imxrt1062-iomuxc-snvs-gpr'
version = '0.1.0'

[dependencies.imxrt1062-kpp]
path = 'imxrt1062-kpp'
version = '0.1.0'

[dependencies.imxrt1062-lcdif]
path = 'imxrt1062-lcdif'
version = '0.1.0'

[dependencies.imxrt1062-lpi2c1]
path = 'imxrt1062-lpi2c1'
version = '0.1.0'

[dependencies.imxrt1062-lpspi1]
path = 'imxrt1062-lpspi1'
version = '0.1.0'

[dependencies.imxrt1062-lpuart1]
path = 'imxrt1062-lpuart1'
version = '0.1.0'

[dependencies.imxrt1062-ocotp]
path = 'imxrt1062-ocotp'
version = '0.1.0'

[dependencies.imxrt1062-pgc]
path = 'imxrt1062-pgc'
version = '0.1.0'

[dependencies.imxrt1062-pit]
path = 'imxrt1062-pit'
version = '0.1.0'

[dependencies.imxrt1062-pmu]
path = 'imxrt1062-pmu'
version = '0.1.0'

[dependencies.imxrt1062-pwm1]
path = 'imxrt1062-pwm1'
version = '0.1.0'

[dependencies.imxrt1062-pxp]
path = 'imxrt1062-pxp'
version = '0.1.0'

[dependencies.imxrt1062-romc]
path = 'imxrt1062-romc'
version = '0.1.0'

[dependencies.imxrt1062-rtwdog]
path = 'imxrt1062-rtwdog'
version = '0.1.0'

[dependencies.imxrt1062-sai1]
path = 'imxrt1062-sai1'
version = '0.1.0'

[dependencies.imxrt1062-semc]
path = 'imxrt1062-semc'
version = '0.1.0'

[dependencies.imxrt1062-snvs]
path = 'imxrt1062-snvs'
version = '0.1.0'

[dependencies.imxrt1062-spdif]
path = 'imxrt1062-spdif'
version = '0.1.0'

[dependencies.imxrt1062-src]
path = 'imxrt1062-src'
version = '0.1.0'

[dependencies.imxrt1062-system-control]
path = 'imxrt1062-system-control'
version = '0.1.0'

[dependencies.imxrt1062-tempmon]
path = 'imxrt1062-tempmon'
version = '0.1.0'

[dependencies.imxrt1062-tmr1]
path = 'imxrt1062-tmr1'
version = '0.1.0'

[dependencies.imxrt1062-trng]
path = 'imxrt1062-trng'
version = '0.1.0'

[dependencies.imxrt1062-tsc]
path = 'imxrt1062-tsc'
version = '0.1.0'

[dependencies.imxrt1062-usb-analog]
path = 'imxrt1062-usb-analog'
version = '0.1.0'

[dependencies.imxrt1062-usb1]
path = 'imxrt1062-usb1'
version = '0.1.0'

[dependencies.imxrt1062-usbnc1]
path = 'imxrt1062-usbnc1'
version = '0.1.0'

[dependencies.imxrt1062-usbphy1]
path = 'imxrt1062-usbphy1'
version = '0.1.0'

[dependencies.imxrt1062-usdhc1]
path = 'imxrt1062-usdhc1'
version = '0.1.0'

[dependencies.imxrt1062-wdog1]
path = 'imxrt1062-wdog1'
version = '0.1.0'

[dependencies.imxrt1062-xbara1]
path = 'imxrt1062-xbara1'
version = '0.1.0'

[dependencies.imxrt1062-xbarb2]
path = 'imxrt1062-xbarb2'
version = '0.1.0'

[dependencies.imxrt1062-xtalosc24m]
path = 'imxrt1062-xtalosc24m'
version = '0.1.0'

[lib]
bench = false
test = false
