[package]
name = "imxrt1062-rt"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

# TODO if the changes in the cortex-m-rt-macros
# crate are accepted upstream, use the normal
# dependency.
[dependencies.cortex-m-rt-macros]
git = "https://github.com/rust-embedded/cortex-m-rt.git"

[build-dependencies]
cc = "1.0.48"

[lib]
bench = false
test = false
