[package]
name = "teensy4-bsp"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
imxrt1062-hal = { path = "../imxrt1062-hal" }
imxrt1062-rt = { path = "../imxrt1062-rt" }
log = "0.4.8"
teensy4-fcb = { path = "../teensy4-fcb" }
teensy4-usb-sys = { path = "teensy4-usb-sys" }

[lib]
bench = false
test = false
