[package]
name = "teensy4-bsp"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mciantyre/teensy4-rs"
description = """
Rust-based BSP for the Teensy 4.
Part of the teensy4-rs project.
"""

[dependencies]
cortex-m = "0.6.1"
log = "0.4.8"
teensy4-fcb = { path = "../teensy4-fcb" }
teensy4-rt = { path = "../teensy4-rt" }
teensy4-usb-sys = { path = "teensy4-usb-sys" }

[dependencies.imxrt-hal]
version = "0.2.1"
features = ["imxrt1062", "rt"]
path = "../../imxrt/imxrt/imxrt-hal"

[lib]
bench = false
test = false
