[package]
name = "teensy4-examples"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
embedded-hal = "0.2.3"
imxrt1060-pac = { path = "../imxrt1060-pac" }
panic-halt = "0.2.0"
teensy4-bsp = { path = "../teensy4-bsp" }

[[bin]]
name = "led"
path = "src/led.rs"
test = false
bench = false

[[bin]]
name = "pit"
path = "src/pit.rs"
test = false
bench = false

[[bin]]
name = "systick"
path = "src/systick.rs"
test = false
bench = false
