[package]
name = "teensy4-examples"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/mciantyre/teensy4-rs"
description = """
Examples of Rust running on the Teensy 4.
Part of the teensy4-rs project.
"""

[dependencies]
cortex-m = "0.6.1"
embedded-hal = "0.2.3"
log = { version = "0.4.8", features = ["release_max_level_info"] }
imxrt-uart-log = { path = "../../imxrt/uart-log" }
nb = "0.1.2"
panic-halt = "0.2.0"
teensy4-bsp = { version = "0.1.0", path = "../teensy4-bsp" }

[[bin]]
name = "dma_memcpy"
path = "src/dma_memcpy.rs"
test = false
bench = false

[[bin]]
name = "dma_spi"
path = "src/dma_spi.rs"
test = false
bench = false

[[bin]]
name = "dma_uart"
path = "src/dma_uart.rs"
test = false
bench = false

[[bin]]
name = "gpt"
path = "src/gpt.rs"
test = false
bench = false

[[bin]]
name = "i2c"
path = "src/i2c.rs"
test = false
bench = false

[[bin]]
name = "led"
path = "src/led.rs"
test = false
bench = false

[[bin]]
name = "log_uart"
path = "src/log_uart.rs"
test = false
bench = false

[[bin]]
name = "pit"
path = "src/pit.rs"
test = false
bench = false

[[bin]]
name = "pwm"
path = "src/pwm.rs"
test = false
bench = false

[[bin]]
name = "spi"
path = "src/spi.rs"
test = false
bench = false

[[bin]]
name = "systick"
path = "src/systick.rs"
test = false
bench = false

[[bin]]
name = "timer"
path = "src/timer.rs"
test = false
bench = false

[[bin]]
name = "uart"
path = "src/uart.rs"
test = false
bench = false

[[bin]]
name = "usb"
path = "src/usb.rs"
test = false
bench = false
