[package]
name = "teensy4-fcb"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mciantyre/teensy4-rs"
description = """
Firmware Configuration Block (FCB) generation for the Teensy 4.
Part of the teensy4-rs project.
"""
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "teensy4",
]

[build-dependencies]
imxrt-fcb-gen = { version = "0.1.0", path = "../../imxrt-fcb-gen", features = ["imxrt1062"] }

[lib]
bench = false
test = false
