[package]
name = "teensy4-fcb"
version = "0.3.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mciantyre/teensy4-rs"
description = """
FlexSPI Configuration Block (FCB) for the Teensy 4.
Part of the teensy4-rs project.
"""
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "teensy4",
]

[dependencies.imxrt-boot-gen]
version = "0.2.0"
features = ["imxrt1060"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[lib]
test = false
doctest = false
