[package]
name = "teensy4-fcb"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
description = """
FlexSPI Configuration Block (FCB) for the Teensy 4.
Part of the teensy4-rs project.
"""
categories.workspace = true
keywords.workspace = true

[dependencies.imxrt-boot-gen]
version = "0.3.0"
features = ["imxrt1060"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[lib]
test = false
doctest = false
