[package]
name = "teensy4-panic"
version = "0.2.1"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mciantyre/teensy4-rs"
description = """
Panic handler for the Teensy 4.
Part of the teensy4-rs project.
"""
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "teensy4",
]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[features]
default = ["panic-handler"]
panic-handler = []

[lib]
test = false

[dependencies.log]
optional = true
version = "0.4"
