[package]
name = "teensy4-panic"
version = "0.2.4"
authors.workspace = true
edition.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
description = """
Panic handler for the Teensy 4.
Part of the teensy4-rs project.
"""
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[features]
default = ["panic-handler"]
panic-handler = []
log = []

[lib]
test = false

[dependencies.log]
optional = true
version = "0.4"
