[package]
name = "teensy4-pins"
version = "0.3.2"
authors.workspace = true
edition.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
description = """
Helpers for configuring and using a Teensy 4's pins.
Part of the teensy4-rs project.
"""
categories.workspace = true
keywords.workspace = true

[dependencies.imxrt-iomuxc]
version = "0.2.0"
features = ["imxrt1060"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
