[package]
name = "teensy4-rt"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.1"
cortex-m-rt-macros = { path = "../../cortex-m-rt/macros" }
panic-halt = "0.2.0"
r0 = "0.2.2"

[build-dependencies]
cc = "1.0.47"

[lib]
test = false # Remove the "test crate not found" RLS error
bench = false
