[package]
name = "teensy4-rt"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.1"
panic-halt = "0.2.0"
r0 = "0.2.2"

# TODO if the changes in the cortex-m-rt-macros
# crate are accepted upstream, use the normal
# dependency.
[dependencies.cortex-m-rt-macros]
git = "https://github.com/mciantyre/cortex-m-rt.git"

[build-dependencies]
cc = "1.0.47"

[lib]
bench = false
test = false
