[package]
name = "bsp"
version = "0.1.0"
publish = false
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies.teensy4-bsp]
version = "0.1"
path = "../../"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = "0.2.4"
log = "0.4.8"
nb = "0.1.2"
panic-halt = "0.2.0"

# Examples that don't need any features

[[bin]]
name = "gpt"
path = "src/gpt.rs"
required-features = []

[[bin]]
name = "led"
path = "src/led.rs"
required-features = []

[[bin]]
name = "pit"
path = "src/pit.rs"
required-features = []

# Examples that use SYSTICK as a timer

[[bin]]
name = "systick"
path = "src/systick.rs"
required-features = ["teensy4-bsp/systick"]

# Examples that require USB logging.
# This implies the "systick" feature.

[[bin]]
name = "dma_memcpy"
path = "src/dma_memcpy.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "dma_spi"
path = "src/dma_spi.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "dma_uart"
path = "src/dma_uart.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "i2c"
path = "src/i2c.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "pwm"
path = "src/pwm.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "spi"
path = "src/spi.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[example]]
name = "srtc"
path = "src/srtc.rs"
required-features = ["usb-logging"]

[[bin]]
name = "timer"
path = "src/timer.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "uart"
path = "src/uart.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "usb"
path = "src/usb.rs"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "usb_writer"
path = "src/usb_writer.rs"
required-features = ["teensy4-bsp/usb-logging"]
