[package]
name = "bsp"
version = "0.1.0"
publish = false
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[dependencies.teensy4-bsp]
version = "0.1"
path = "../../"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = "0.2.4"
log = "0.4.8"
nb = "0.1.2"
panic-halt = "0.2.0"

# Examples that don't need any features

[[bin]]
name = "gpt"
required-features = []

[[bin]]
name = "led"
required-features = []

[[bin]]
name = "pit"
required-features = []

# Examples that use SYSTICK as a timer

[[bin]]
name = "systick"
required-features = ["teensy4-bsp/systick"]

# Examples that require USB logging.
# This implies the "systick" feature.

[[bin]]
name = "dma_memcpy"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "dma_spi"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "dma_uart"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "i2c"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "pwm"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "spi"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "srtc"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "timer"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "uart"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "usb"
required-features = ["teensy4-bsp/usb-logging"]

[[bin]]
name = "usb_writer"
required-features = ["teensy4-bsp/usb-logging"]
